# Physical-AI-Humanoid-Robotics

./: .env  .gitignore  CLAUDE.md  Dockerfile  GEMINI.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tailwind.config.js  tsconfig.json
.claude/: settings.local.json
.claude/commands/: speckit.constitution.md  speckit.plan.md
.specify/memory/: MODULE_1_TASKS.md  MODULE_2_PLAN.md  MODULE_2_TASKS.md  MODULE_4_PLAN.md  MODULE_4_QUICKSTART.md  MODULE_4_RESEARCH.md  MODULE_4_SPEC.md  MODULE_4_TASKS.md
.vercel/: project.json
RAG/: .env.example  README.md  agent.py  main.py  requirements.txt  retrieval_test.py  spec1.md  test_pipeline.py
RAG/backend/: main.py  pyproject.toml
RAG/test_retrieval/: __init__.py  connection.py  logging.py  queries.py  validation.py
RAG_Backend/Chatbot/: Dockerfile  README.md  __init__.py  app.py  main.py  pyproject.toml  requirements.txt  simple_backend.py  test_imports.py
RAG_Backend/Chatbot/src/: config.py
RAG_Backend/Chatbot/src/api/: health_router.py  query_router.py
RAG_Backend/Chatbot/src/models/: content_chunk.py  query.py  response.py
RAG_Backend/Chatbot/src/services/: agent_service.py  logging_service.py  mock_qdrant_service.py
RAG_Backend/Chatbot/tests/: test_ingestion_service.py
book/: docusaurus.config.ts  generate_content.sh  package-lock.json  package.json  sidebars.ts
book/RAG/: agent.py  main.py  pyproject.toml  retrieving.py
book/book/: Dockerfile  package-lock.json  package.json
book/docs/: intro.md
book/research/: slam_rl_resources.md
docs/: intro.md
rag_api/: .env.example  .gitignore  main.py  requirements.txt  simple_requirements.txt  test_api_startup.py
rag_api/src/: config.py  utils.py
research/: ros2_concepts_research.md
(+123 files in other folders)
