[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools"

[project]
name = "rad-ingestion-pipeline"
version = "0.1.0"
description = "RAG Ingestion Pipeline for Docusaurus Content"
authors = [{name = "AI Developer", email = "dev@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "qdrant-client>=1.9.0",
    "cohere>=4.4.3",
    "beautifulsoup4>=4.12.2",
    "python-dotenv>=1.0.0",
    "trafilatura>=1.6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0"
]

[project.urls]
Homepage = "https://github.com/your-repo/rad-ingestion-pipeline"