[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools"

[project]
name = "rag_api"
version = "1.0.0"
description = "RAG Agent API for the book content retrieval system"
authors = [{name = "AI Developer", email = "dev@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "qdrant-client>=1.9.1",
    "openai>=1.3.7",
    "pydantic>=2.5.0",
    "beautifulsoup4>=4.12.2",
    "trafilatura>=1.6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0"
]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0"
]

[project.urls]
Homepage = "https://github.com/your-repo/rag_api"

[tool.setuptools.packages.find]
where = ["."]
include = ["rag_api*"]